--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="main">
+    <div class="btn-group btn-group-sm" data-toggle="buttons">
+        <label class="btn btn-secondary"  data-type="cleared">
+            <input type="checkbox" name="options" autocomplete="off">Cleared
+        </label>
+        <label class="btn btn-secondary active" data-type="nodes_links">
+            <input type="checkbox" name="options" autocomplete="off" checked>Nodes/Links
+        </label>
+        <label class="btn btn-secondary"  data-type="states">
+            <input type="checkbox" name="options" autocomplete="off">States
+        </label>
+        <label class="btn btn-secondary"  data-type="triangle_bins">
+            <input type="checkbox" name="options" autocomplete="off"> Triangle Bins
+        </label>
+    </div>
+    <div id="main"> 
         <div id="map" style="height: 640px; width: 680px; border: 1px solid #777;"></div>
     </div>
-</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -21,4 +34,6 @@
 <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 <script src="./d3-tip.js"></script>
 <script src="./main.js"></script>
+</body>
+
 </html>
