--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="btn-group btn-group-sm" data-toggle="buttons">
         <label class="btn btn-secondary"  data-type="cleared">
-            <input type="checkbox" name="options" autocomplete="off">Cleared
+            <input type="checkbox" name="options"> Cleared
         </label>
         <label class="btn btn-secondary active" data-type="nodes_links">
-            <input type="checkbox" name="options" autocomplete="off" checked>Nodes/Links
+            <input type="checkbox" name="options" checked>Nodes/Links
         </label>
         <label class="btn btn-secondary"  data-type="states">
-            <input type="checkbox" name="options" autocomplete="off">States
+            <input type="checkbox" name="options" >States
         </label>
         <label class="btn btn-secondary"  data-type="triangle_bins">
-            <input type="checkbox" name="options" autocomplete="off"> Triangle Bins
+            <input type="checkbox" name="options" > Triangle Bins
         </label>
     </div>
     <div id="main"> 
